1999-03-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Diffuse2d.m: Remove const unsigned maxStates and replace with
	macro.

1999-02-26  Alex Lancaster  <alex@santafe.edu>

	* Value2dDisplay.m ([Value2dDisplay -setDiscrete2dToDisplay:]):
	Check for Discrete2d instead of _Discrete2d.

	* Object2dDisplay.m ([Object2dDisplay -setDiscrete2dToDisplay:]):
	Likewise.
	
1999-02-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* space.h: Merge _Discrete2d with Discrete2d.  Add CREATABLE
	tags for all non-abstract protocols.

	* Discrete2d.m ([Discrete2d setDiscrete2d:toFile:], 
	[Discrete2d copyDiscrete2d:toDiscrete2d:]): Check for Discrete2d
	instead of _Discrete2d.

	* Discrete2d.h (Discrete2d): Implement Discrete2d protocol.

1999-02-15  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Discrete2d.[hm], space.h ([Discrete -setLattice:]): New method.

1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (CURRENT, REVISION, AGE): No changes.  Version 1.4.1.

1998-10-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT): Increment.
	Swarm 1.3.1 released.

	* space.h (_Discrete2d): Make x and y arguments to setSizeX:Y:,
	getObjectAtX:Y: getValueAtX:Y:, putObject:atX:Y:, putValue:atX:Y:
	unsigned.  Make return values of getSize{X,Y} unsigned.
	(DblBuffer2d): Make x and y arguments to putObject:atX:Y: and
	putValue:atX:Y: unsigned.
	(Grid2d): Likewise.
	(Ca2d): Make argument to setNumStates: unsigned.
	
	* Object2dDisplay.[hm] ([Object -makeProbeAtX:Y:]): Make x and
	y unsigned.

	* Grid2d.m ([Grid -putObject:atX:Y:]): Make x and y unsigned.

	* Discrete2d.m ([Discrete2d -makeOffsets]): Make i unsigned.
	([Discrete2d -setDiscrete2d:toFile]): Make x, y, fileXSize, and
	fileYSize unsigned.
	([Discrete2d -copyDiscrete2d:toDiscrete2d:]): Make x and y
	unsigned.

	* Discrete2d.[hm] ([Discrete2d -setSizeX:Y:], [Discrete2d
	-getSizeX],
	[Discrete2d -getSizeY], [Discrete2d -getObjectAtX:Y:], [Discrete2d